<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name" translatable="false">Turbo Launcher</string>
    <string name="application_title">Turbo Launcher®</string>
    <string name="application_version" translatable="false">0.0.2</string>
    <string name="application_copyright">Copyright \u00A9 2013 &#8211; 2017 Phonemetra</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="widget_adder">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d \u00d7 %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="invalid_hotseat_item">This widget is too large for the Favorites tray</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="debug_memory_activity">* HPROF</string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="sort_button_text">Sort</string>
    <string name="filter_button_text">Filter</string>
    <string name="default_screen_button_text">Default screen</string>
    <string name="transition_effect_button_text">Scroll Effect</string>
    <string name="wallpaper_scroll">Wallpaper scroll</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_application_title">App</string>
    <string name="preferences_interface_homescreen_title">Home Screen</string>
    <string name="preferences_interface_homescreen_search_title">Search bar</string>
    <string name="preferences_interface_homescreen_search_summary">Show search bar</string>
    <string name="preferences_interface_homescreen_general_hide_icon_labels_title">Hide icon labels</string>
    <string name="preferences_interface_homescreen_general_hide_icon_labels_summary">Hide icon labels on home screen</string>
    <string name="preferences_interface_drawer_title">Drawer</string>
    <string name="preferences_interface_drawer_summary">Drawer app and widget</string>
    <string name="preferences_interface_drawer_apps_category">Apps</string>
    <string name="preferences_interface_drawer_hidden_apps_title">Hidden Apps</string>
    <string name="preferences_interface_drawer_hidden_apps_summary">Hide apps on drawer</string>
    <string name="preferences_interface_drawer_hidden_apps_shortcuts_title">Remove shortcuts</string>
    <string name="preferences_interface_drawer_hidden_apps_shortcuts_summary">Remove shortcuts of the hidden apps on home screen</string>
    <string name="preferences_interface_drawer_hidden_apps_widgets_title">Remove widgets</string>
    <string name="preferences_interface_drawer_hidden_apps_widgets_summary">Remove widgets of the hidden apps on home screen</string>
    <string name="preferences_interface_drawer_hide_icon_labels_title">Hide icon labels</string>
    <string name="preferences_interface_drawer_hide_icon_labels_summary">Hide icon labels on drawer</string>
    <string name="preferences_interface_dock_title">Dock</string>
    <string name="preferences_interface_general_title">General</string>
    <string name="preferences_interface_general_icons_category">Icons</string>
    <string name="preferences_interface_general_icons_large_title">Icons large</string>
    <string name="preferences_interface_general_icons_large_summary">Set Icons large on home screen and drawer</string>
    <string name="preferences_interface_general_icons_text_style_title">Icons text style</string>
    <string name="preferences_interface_general_icons_text_style_summary">Set icons text style</string>
    <string name="menu_hidden_apps_delete">Restore</string>
    <string name="launcher_settings">LAUNCHER SETTINGS</string>
    <string name="home_screen_settings">HOMESCREEN</string>
    <string name="drawer_settings">DRAWER</string>
    <string name="app_settings">GENERAL</string>
    <string name="dock_settings">DOCK</string>
    <string name="build_settings">BUILD</string>
    <string name="setting_state_on">ON</string>
    <string name="setting_state_off">OFF</string>
    <string name="themes_button_text">Themes</string>
    <string name="scrolling_page_outlines">Page outlines</string>
    <string name="scrolling_fade_adjacent">Fade side pages</string>
    <string name="scrolling_wallpaper">Scroll wallpaper</string>
    <string name="google_title" translatable="false">Google</string>
    <string name="hidden_apps_title">Hidden apps</string>
    <string name="scroll_effect_text">Scroll effect</string>
    <string name="drawer_sorting_text">Sorting mode</string>
    <string name="sort_mode_title">Title</string>
    <string name="sort_mode_launch_count">Launch count</string>
    <string name="sort_mode_install_time">Install time</string>
    <string name="home_screen_search_text">Search bar</string>
    <string name="larger_icons_text">Larger icons</string>
    <string name="hide_icon_labels">Hide icon labels</string>
    <string name="protected_app_settings">Protected apps</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="image_load_fail">Coudn\'t load image</string>
    <string name="wallpaper_load_fail">Couldn\'t load image as wallpaper</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="wallpaper_accessibility_name">Wallpaper %1$d of %2$d</string>
    <string name="announce_selection">Selected <xliff:g id="label" example="Wallpaper 3 of 10">%1$s</xliff:g></string>
    <string name="wallpaper_delete">Delete</string>
    <string name="pick_image">Pick image</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="crop_wallpaper">Crop wallpaper</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="pref_title_theme_settings">Themes</string>
    <string name="pref_summary_theme_settings">Select themes for Turbo Launcher</string>
    <string name="pref_title_theme_package">Select your theme</string>
    <string name="pref_summary_theme_package">Choose your theme for Turbo Launcher</string>
    <string name="pref_title_theme_preview">Theme Preview</string>
    <string name="pref_summary_theme_preview">Preview of the selected theme</string>
    <string name="pref_title_theme_icons">Use Theme Icons</string>
    <string name="pref_summary_theme_icons">Deselect this to use default icons</string>
    <string name="pref_title_theme_font">Use Theme Font</string>
    <string name="pref_summary_theme_font">Deselect this to use default font</string>
    <string name="pref_themes_apply_theme">Apply theme!</string>
    <string name="pref_themes_get_themes">Get themes!</string>
</resources>